*Empty MediaWiki Message*

--- a/Kekkonen_Urho.mw
+++ b/Kekkonen_Urho.mw
@@ -2,7 +2,7 @@
 | изображение = Urho-Kekkonen-1977.jpg
 | описание изображения = Urho Kekkonen vl 1977
 }}
-'''Urho Kaleva Kekkonen''' (mugažo [[suomen kel'|suomen kelel]]; sünd. [[3. sügüz'ku]] [[1900]], [[Pielavezi]], [[Suomenman Sur' ruhtinazkund]], [[Venäman imperii]] — [[31. eloku]] [[1986]], [[Hel'sinki]], [[Suomenma]]) oli politikanmez', kudamb oli ranu [[Suomenma]]n kahesanden lugul prezidentan 25 vot, nell' strokud jäl'geten (01.03.1956—26.10.1981). Vozil 1950−1956 radoi valdkundan päministran kaks' strokud.
+'''Urho Kaleva Kekkonen''' (mugažo [[suomen kel'|suomen kelel]]; sünd. [[3. sügüz'ku]] [[1900]], [[Pielavezi]], [[Suomenman Sur' ruhtinazkund]], [[Venäman imperii]] — kol. [[31. eloku]] [[1986]], [[Hel'sinki]], [[Suomenma]], om mahapandud siš-žo) oli politikanmez', kudamb oli ranu [[Suomenma]]n kahesanden lugul prezidentan 25 vot, nell' strokud jäl'geten (01.03.1956—26.10.1981). Vozil 1950−1956 radoi valdkundan päministran kaks' strokud.
 
 == Biografii ==
 Vl 1919 oli [[Kajani]]-licein pästnikan i zavodi radod «Kajanin lehti»-lugendlehteses. Kekkonen oli lehtezmehen elon lophusai, sädi kirjutusid pälidnan aiglehtesihe prezidentan radon eskai. Vl 1921 mez' sirdi Hel'sinkihe i tuli opendushe [[Hel'sinkin universitet]]an juridižes fakul'tetas. Ühtni üläopenikoiden likundha. Lopi opendust universitetas vl 1926. Vll 1927−1932 radoi juristan Külämunicipalitetoiden associacijas, ühten aigan vll 1927−1928 oli universitetan üläopenikoiden ''Ylioppilaslehti''-lehtesen päredaktoran. Oti radnikust maižandusen ministruses vspäi 1933. Vl 1936 sai juridižiden tedoiden doktoran arvod.
