--- a/Pirsing.mw
+++ b/Pirsing.mw
@@ -6,6 +6,8 @@ Tehtas pirsingad hibjan erazvuiččil paloil: korv (paksumb kaiked), nena, kel',
 
 Pirsingan tehmižen sü om kul'turan, religijan vai subkul'turan tarbhaičendad, estetikan el'genduz. Korviden pirsing om levitadud Afrikan heimoiš amussai. Pirsing eile varuitomaks medicinižeks proceduraks, kaikutte sadanz' ristit sab lekariden kiruhabud sen jäl'ghe. Ottas kävutamižhe allergijatomid materialoid, oz., titan. Opendusen aluzkundad, radonandajad i religijankundad röunatadas pirsingan kandandad tobjimalaz.
 
+Läz kaikiden kiškaižiden tervehtandan aig otab kaks'-nell' nedalid minimaližen travman i oiktan holitandan statjas, naban kiškaine spravitase pol'vodes. Ginnessan rekordoiden ristituil om sadad kaikenaigaižid i pordaigaližid reiguid čomitesiden täht.
+
 == Homaičendad ==
 <references />
 
