--- a/Relander_Lauri_Kristian.mw
+++ b/Relander_Lauri_Kristian.mw
@@ -2,7 +2,14 @@
 | изображение = Lauri Kristian Relander.png
 | описание изображения = Lauri Kristian Relander
 }}
-'''Lauri Kristian Relander''' (mugažo [[suomen kel'|suomen kelel]], {{lang-sv|Lars Kristian Relander}}; sünd. 31. semendku 1883, [[Sur' Suomenman gercogkund]], [[Venäman imperii]] — kol. 9. uhoku 1942, [[Hel'sinki]], [[Suomenma]]) oli [[Suomenma|Suomenman Tazovaldkundan]] kahtenden prezidentan (vozil 1925–1931).
+'''Lauri Kristian Relander''' (mugažo [[suomen kel'|suomen kelel]], {{lang-sv|Lars Kristian Relander}}; sünd. 31. semendku 1883, [[Kurkijoki]]-žilo (nüg. [[Lahdenpohjan rajon]]as), [[Sur' Suomenman gercogkund]], [[Venäman imperii]] — kol. 9. uhoku 1942, [[Hel'sinki]], [[Suomenma]]) oli [[Suomenma|Suomenman Tazovaldkundan]] kahtenden prezidentan (vozil 1925–1931).
+
+== Biografii ==
+Lauri oli sündnu Kurkijokin maižanduzškolan direktoran kanzha. Oli pästnus Kurkijokin keskškolaspäi i maižanduzškolaspäi (agronom), openui Viipurin realižes liceiš, sid' tuli openumha universitetha Aleksandr-imperatoran nimed (Hel'sinki). Opendusen mödhe oli filosofijan magistran, vl 1914 sai filosofijan doktoran arvod. Vll 1908−1917 tegi tedoiduztöid maižanduzkodvindstancijal Hel'sinkiš, sädi kagran kuz' ut sortud.
+
+Vl 1905 mez' nai, oti Signa Maria Ostermanad akaks. Sündutihe tütärt i poigad naimiželos.
+
+Vll 1910−1913 i 1917−1920 Lauri Kristian Relander oli valitud avtonomijan i sid' valdkundan parlamentha Agrarine ühtištuz-partijaspäi. Kändihe ühteks lideroišpäi, i vspäi 1919 oli parlamentan ezimehen. Vll 1920−1925 politikanmez' radoi [[Viirupin gubernii|Viirupin gubernijan]] gubernatoran.
 
 == Homaičendad ==
 <references/>
