--- a/Relander_Lauri_Kristian.mw
+++ b/Relander_Lauri_Kristian.mw
@@ -11,6 +11,8 @@ Vl 1905 mez' nai, oti Signa Maria Ostermanad akaks. Sündutihe tütärt i poigad
 
 Vll 1910−1913 i 1917−1920 Lauri Kristian Relander oli valitud avtonomijan i sid' valdkundan parlamentha Agrarine ühtištuz-partijaspäi. Kändihe ühteks lideroišpäi, i vspäi 1919 oli parlamentan ezimehen. Vll 1920−1925 politikanmez' radoi [[Viirupin gubernii|Viirupin gubernijan]] gubernatoran.
 
+Prezidentan strokun jäl'ghe oli ''Suomen maalaisten paloapuyhdistys''-varmituzkompanijan direktoran ičeze surmhasai. Koli südäikurospäi vl 1942.
+
 == Homaičendad ==
 <references/>
 
