*Empty MediaWiki Message*

--- a/Pirsing.mw
+++ b/Pirsing.mw
@@ -1,12 +1,12 @@
 {{A10000}}
 [[Fail:Stretched Earlobes.jpg|thumb|right|250px|Mez' erazvuiččiden pirsingan toižendoidenke]]
-'''Pirsing''' ([[anglijan kel'|anglijan kelel]] om ''piercing'' — «kiškaine») om [[hibj]]an modifikacijan form kandmaha čomitesid. Se om kiškaižen process i rezul'tat.
+'''Pirsing''' ([[anglijan kel'|anglijan kelel]] om ''piercing'' — «kiškaine») om [[hibj]]an modifikacijan form kandmaha čomitesid. Se om kiškaidusen process i rezul'tat.
 
-Tehtas pirsingad hibjan erazvuiččil paloil: korv (paksumb kaiked), nena, kel', naba da toižed.
+Tehtas pirsingad hibjan erazvuiččil paloil: korv (paksumb kaiked), nena, kel', rindhanpähuded, naba da toižed.
 
 Pirsingan tehmižen sü om kul'turan, religijan vai subkul'turan tarbhaičendad, estetikan el'genduz. Korviden pirsing om levitadud Afrikan heimoiš amussai. Pirsing eile varuitomaks medicinižeks proceduraks, kaikutte sadanz' ristit sab lekariden kiruhabud sen jäl'ghe. Ottas kävutamižhe allergijatomid materialoid, oz., titan. Opendusen aluzkundad, radonandajad i religijankundad röunatadas pirsingan kandandad tobjimalaz.
 
-Läz kaikiden kiškaižiden tervehtandan aig otab kaks'-nell' nedalid minimaližen travman i oiktan holitandan statjas, naban kiškaine spravitase pol'vodes. Ginnessan rekordoiden ristituil om sadad kaikenaigaižid i pordaigaližid reiguid čomitesiden täht.
+Läz kaikiden kiškaidusiden tervehtandan aig otab kaks'-nell' nedalid minimaližen travman i oiktan holitandan statjas, naban kiškaiduz spravitase pol'vodes. Ginnessan rekordoiden ristituil om sadad kaikenaigaižid i pordaigaližid reiguid čomitesiden täht.
 
 == Homaičendad ==
 <references />
