*Empty MediaWiki Message*

--- a/Vägestusen_päiv.mw
+++ b/Vägestusen_päiv.mw
@@ -11,7 +11,7 @@ Praznikpäiväl vedadas sodaparadoid i praznikambuškelendoid (salütoid) Venäm
 [[Kategorii:NSTÜ:n praznikad]]
 [[Kategorii:Venäman praznikad]]
 [[Kategorii:Armenijan praznikad]]
-[[Kategorii:Azerbaižanan praznikad]]
+[[Kategorii:Azerbaidžanan praznikad]]
 [[Kategorii:Kazahstanan praznikad]]
 [[Kategorii:Kirgizstanan praznikad]]
 [[Kategorii:Moldovan praznikad]]
