--- a/Sovetskii_(Hantin_da_Mansin_avtonomine_ümbrik).mw
+++ b/Sovetskii_(Hantin_da_Mansin_avtonomine_ümbrik).mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Sovetskijan lidnanznam
  | Flag text = Sovetskijan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 29,456
- | Voz' = 2017
+ | Eläjiden lugu = 29,452
+ | Voz' = 2021
  | Pind = 50
  | Fail = Советский. вид сверху (2003 г.).jpg
- | Pämez' = Aleksandr Žukov<br />(reduku 2016—)
+ | Pämez' = Aleksandr Kulagin<br />(sügüz'ku 2020—)
  | Telefonkod = +7-34675-xx-xxx
  | Avtokod = 86. 186
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
@@ -24,14 +24,25 @@ Sovetskii šingotase mecan varhapanendal da sen ümbriradmižel sauvondmateriali
 == Geografijan andmused ==
 Lidn sijadase [[Ob'|Obin]] hurapol'žes basseinas, 112 m keskmäižel korktusel valdmeren pindan päl. Matkad [[Hanti-Mansiisk]]hasai om 295 km päivnouzmha orhal vai 365 km avtotedme. Lähembaine lidn om [[Jugorsk]] 10 km päivlaskmha orhal, raudtel vai avtotedme.
 
-Sovetskii om lidnankundan üks'jäine eländpunkt. Lidnankundan pind — 383,25 km².
+Sovetskii om lidnankundan üks'jäine eländpunkt. Lidnankundan pind — 388,90 km².
 
 == Eläjad ==
-Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 26 495 ristitud, rajonan koume videndest. Kaikiš suremb lidnan ristitišt om nügüd'. Ortodoksižen hristanuskondan koume jumalanpertid (Sündun voznesen'jan, Mikulai-čudonsädajan i Ksenija Piterilaižen) i islaman «Nur»-pühäpert' (2015) oma olmas lidnas.
+Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 26 495 ristitud, rajonan koume videndest. Kaikiš suremb lidnan ristitišt oli 29 624 eläjad vl 2019.
 
 Rahvahad (enamba 1,3% vl 2010, ozutadud rahvahudenke): [[venälaižed]] — 78,7%, [[totarlaižed]] — 7,8%, [[ukrainalaižed]] — 3,2%, [[azerbaidžanlaižed]] — 1,6%, [[baškiralaižed]] — 1,3%, toižed rahvahad — 7,4%.
 
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] koume jumalanpertid (Sündun voznesen'jan, Mikulai-čudonsädajan i Ksenija Piterilaižen) i [[islam]]an «Nur»-pühäpert' (2015) oma olmas lidnas.
+
 Sovetskijan politehnine kolledž<ref>[http://www.sovprocollege.ru/ Sovetskijan politehnižen kolledžan sait (''sovprocollege.ru'').] {{ref-ru}}</ref> om professionaližen opendusen aluzkundaks.
+
+Edeline lidnan pämez' om Aleksandr Žukov (reduku 2016 — sügüz'ku 2020).
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Первые дома п. Советский, ХМАО.png|Ezmäižed pertid (istorine fotokuva)
+Первая "брендовая" АЗС после Ханты-Мансийска. Советский. - panoramio.jpg|Benzintäutandstancii (2014)
+Airport Sovetsky. View from apron.JPG|Sovetskii-lendimportan sauvused vl 2012
+</gallery>
 
 == Homaičendad ==
 <references />
