Replacing Seal_of_New_Orleans,_Louisiana.png with [[File:Seal_of_New_Orleans,_Louisiana_(1938–2018).png]] (by [[:c:User:CommonsDelinker|CommonsDelinker]] because: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR3|Criterion 3]]).

--- a/Uz'_Orlean.mw
+++ b/Uz'_Orlean.mw
@@ -1,7 +1,7 @@
 {{10000}}{{A10000}}
 {{Eländpunkt
  | Nimi = Uz' Orlean<br />New Orleans
- | Lidnanznam = Seal of New Orleans, Louisiana.png
+ | Lidnanznam = Seal of New Orleans, Louisiana (1938–2018).png
  | Flag = Flag of New Orleans, Louisiana.svg
  | Lidnanznam text = Uden Orleanan lidnanznam
  | Flag text = Uden Orleanan flag
