--- a/Violine.mw
+++ b/Violine.mw
@@ -3,11 +3,11 @@
 [[Fail:Stainer.jpg|thumb|right|250px|Järgeline violine (165?-ndel vlpäi)]]
 '''Violine''' ({{lang-it|violino}}) om populärine kaikes mail'mas [[jändesoit]]. Sil znamasine rol' om [[Evrop]]an kul'turas.
 
-Rahvahaline augotižlibund om necil soitol. Violine sai nügüdläšt nägud 16. voz'sadan keskes Italijan pohjoižes. Levini 17. voz'sadal kut soline soit, kändihe populäižeks Päivnouzmaižen Evropan maiš.
+Rahvahaline augotižlibund om necil soitol. Violine sai nügüdläšt nägud 16. voz'sadan keskes Italijan pohjoižes. Levini 17. voz'sadal kut soline soit, kändihe populäižeks Päivnouzmaižen Evropan maiš. Violine i [[fortepjano]] oma [[klassine muzik|akademižen (klassižen) muzikan]] päsoitod. 18. voz'sadan keskespäi violine om simfonižen orkestran i jändekvartetan päsoit.
 
 Violižen mastarid tehtas soitoid. Kaik nell' (viž harvašti) [[jände (muzik)|jändet]] om olmas violižel. Muzikant soitab niil [[taugut|tauguden]] abul.
 
-Violižen än' (tembr) om sanged alaregistras, pehmed keskregistras i lošt üläregistras.
+Violižen än' (tembr) om sanged alaregistras, pehmed keskregistras i lošt üläregistras. Nell' jändet oma lattüd kvintoiden mödhe: G<sup>M</sup> D<sup>1</sup> A<sup>1</sup> E<sup>2</sup>. Se om jändesoitoiden kaikiš korktemb registrine toižend i kaikiš penemb soit.
 
 == Homaičendad ==
 <references />
