--- a/Miime.mw
+++ b/Miime.mw
@@ -1,6 +1,6 @@
-'''Miime''' ({{lang-ja|ミーメ}}) om [[tedoline fantastik|tedoližen fantastikan]] riven kul'tine melestehtud personaž, verazplanetalaine naine, [[kosmine merirazbainik]].
+'''Miime''' ({{lang-ja|ミーメ}}) om [[tedoline fantastik|tedoližen fantastikan]] riven kul'tine melestehtud personaž, verazplanetalaine naine, [[kosmine merirazbainik]]. Sen-žo personažan nimed oma Klio (Harlock 78) i Mima (Harlock 84). Äneti [[Noriko Ohara]]-aktris.
 
-Sarnaližen naižen hibused oma azur'žed mujul, sil'mad oma pakuižed. Hänel om üläpsihižid i psionižid voimusid. Miime om jäl'gmäine jänu elegiš Dzür-planetan eläi (''Dzüra''), Harlok päzuti händast. Naine oti pätandan jäta joukus ičeze kitandaks. Kapitanan lähembaine abunik, naine om vaumiž kaita händast ičeze elon arvol eskai. Miime om suta, no voib kulutada sömäd i vet. Abutab Zero-lekarile, konz satatadud oma tömehištos. Vändab arfal hüvin.
+Sarnaližen naižen hibused oma azur'žed mujul, sil'mad oma pakuižed. Hänel om üläpsihižid i psionižid voimusid, korged mujandmär i el'genduz, voib antta arvokast nevondad teravas situacijas. Miime om jäl'gmäine jänu elegiš Dzür-planetan eläi (''Dzüra'') atomsodan i lihasöjiden kazmusiden levitandan jäl'ghe, Harlok päzuti händast. Naine oti pätandan jäta joukus ičeze kitandaks. Kapitanan lähembaine abunik, naine om vaumiž kaita händast ičeze elon arvol eskai. Miime om suta, no voib kulutada sömäd i vet. Abutab Zero-lekarile, konz satatadud oma tömehištos. Vändab arfal hüvin.
 
 Harlock Saga:n OVA-serijas Miime om ristit, i biografii om toine, hän om Nibelung-klanan ühtnijan. Vn 2013 fil'mas naine om kuvatud gumanoidaks, no hänen sil'mad i su oma järgeližed.
 
