--- a/Iisusan_loičend.mw
+++ b/Iisusan_loičend.mw
@@ -1,11 +1,13 @@
-'''Iisusan loičend''' om loičend [[Ortodoksine hristanuskond|Ortodoksižes hristanuskondas]].
+'''Iisusan loičend''' om loičend [[ortodoksine hristanuskond|ortodoksižes hristanuskondas]] i [[grekan katoline jumalankodikund|grekan katoližes jumalankodikundas]].
 
 [[Venäkel'|Venäks]]:
 <blockquote>''Господи, Иисусе Христе, Сыне Божий, помилуй мя грешнаго.''</blockquote>
 
 [[Vepsän kel'|Vepsäks]]:
 <blockquote>''Sur' Sünd, Jumalan poig, armahta mindai, grähkhišt.''</blockquote>
-{{stub}}
 
+Ortodoksižen hristanuskondan veros se loičend voib lugetas «meliš» edel tulendad pühäpertihe. Se voib kävutadas hristanuskojal kut sanad Sündunnoks, miše Hän abutiži kaikiš statjoiš varuližusen, elon jügedusiden, himoitišen aigan. Voib lugeta üks'jäižes, kahten kesken, kaikel kundal.
+
+{{stub}}
 [[Kategorii:Ortodoksine hristanuskond]]
 [[Kategorii:Hristanuskondloičendad]]
