--- a/Iisusan_loičend.mw
+++ b/Iisusan_loičend.mw
@@ -6,7 +6,11 @@
 [[Vepsän kel'|Vepsäks]]:
 <blockquote>''Sur' Sünd, Jumalan poig, armahta mindai, grähkhišt.''</blockquote>
 
+Lühüd form: ''Sur' Sünd, armahta''.
+
 Ortodoksižen hristanuskondan veros se loičend voib lugetas «meliš» edel tulendad pühäpertihe. Se voib kävutadas hristanuskojal kut sanad Sündunnoks, miše Hän abutiži kaikiš statjoiš varuližusen, elon jügedusiden, himoitišen aigan. Voib lugeta üks'jäižes, kahten kesken, kaikel kundal.
+
+Iisusan loičendan sädand om pühän [[Makarii Sur'|Makarii Egiptalaižen]] (eli 4. voz'sadal) [[apofegm]]oihe sidodud. Loičendan nügüd'aigaine tekst om kirjutadud ezmäižen kerdan ph. [[Grigorii Sinajalaine|Grigorii Sinajalaižel]] (1268−1346) Krit-sarel.
 
 {{stub}}
 [[Kategorii:Ortodoksine hristanuskond]]
