--- a/Jalov.mw
+++ b/Jalov.mw
@@ -13,10 +13,14 @@
  | Telefonkod = +90-(0)226
  | Aigvö = [[UTC]]+3
 }}
-'''Jalov''' ({{lang-tr|Yalova}}) om lidn [[Turkanma]]n lodehes. Se om kurort hulil purtkil, [[Jalovan agj]]an administrativine keskuz.
+'''Jalov''' ({{lang-tr|Yalova}}) om lidn [[Turkanma]]n lodehes. Se om kurort hulil purtkil, [[Jalovan agj]]an administrativine keskuz (vspäi 1995).
 
-Amuižen aigan eländpunktan nimituz oli ''Pilai'' ({{lang-el|Πύλαι}}). Vn 1999 manrehkaiduz (7,4 magnitudanke) mureni lidnad lujas, pölištui enamba 2,5 tuh. lidnalaižid.
+== Istorii ==
+Amuižen aigan eländpunktan nimituz oli ''Pilai'' ({{lang-el|Πύλαι}}). Vl 1302 osmanižed turkad otiba eländpunktad vägel, i pigai se kändihe [[Ottomanan im perii|Ottomanan imperijan]] palaks.
 
+[[Mustafa Kemal' Atatürk]] eli lidnas ičeze jäl'gmäižil vozil statjoidme. Vn 1999 manrehkaiduz (7,4 magnitudanke) mureni lidnad lujas, pölištui enamba 2,5 tuh. lidnalaižid.
+
+== Geografijan andmused ==
 Lidn sijadase [[Mramorine meri|Mramorižen meren]] päivnouzmaižel randal, 30 m ü.m.t. keskmäižel korktusel. Lähembaižed sured lidnad oma [[Izmit]] i [[Stambul]].
 
 Vl 2012 lidnan eläjiden lugu oli 102 874 ristitud.
