--- a/Meitel.mw
+++ b/Meitel.mw
@@ -1,4 +1,10 @@
-'''Maetel''' ({{lang-ja|メーテル}} ''Meeteru'') om tedoližen fantastikan riven kul'tine melestehtud personaž, vägimez'. Ezmäižen kerdan hän ozutihe [[Tähtazkundan ekspress 999]]-mangas (1977). Hän sobib must kostüm päl da must šapuk päle i om venälaižhe neiččehe pojav.
+'''Meitel''' ({{lang-ja|メーテル}} ''Meeteru'') om tedoližen fantastikan riven kul'tine melestehtud personaž, vägimez'.
+
+Ezmäižen kerdan Meitel ozutihe [[Tähtazkundan ekspress 999]]-mangas (1977). Hän om čomač pit'kidenke vauvhidenke hibusidenke, sobib must kostüm päl da must šapuk päle päiči ühten mangan ezmäižes palas, kus hän om vauvaz pal't päl. Meitel sel'gitab mustad sobad kut trauran znam pölištunuziden sebranikoiden muštoks (kinoversijas — kut traur ičeze enččiden hibjoiden muštoks). Naine kandab vauktad matklipast kerdalaz, siš azegišt, sobad da toine matkbagaž kaičesoiš, iče matklipaz kävutase sidon täht pämehištonke.
+
+Naine om [[Tecuro Hošino|Tecuron]] kaimdajan ajelendas Andromedannoks. Tecuro tundištab hänes ičeze mamad, no scenarijan mändes mainitase, miše naine ei voi kolda, Meitel spravitase teravas surmaližihe satatesihe kacmata. Kinoversijan finalas Meitel avaidase Tecurole, pagižeb, miše hänen mam faktižikš, hibj vajehtase ravastusen tagut i se om eziauguižen Meitelan kopii. Naižen todesine hibj kaičese jäižes Plutonas, Tecuro nägui itkijad Meitelad sen planetan kaumžomal. Finalas Meitel ajeleb Plutonha udessündutamha ičeze hibjad, no jäi tedmata, kändi-k hän ristituks tošti.
+
+Änetiba artistad: Masako Ikeda i Sacuki Jukino («Maetel Legend» i «Space Symphony Maetel»).
 
 == Homaičendad ==
 <references />
