*Empty MediaWiki Message*

--- a/Meitelan_kosmine_simfonii.mw
+++ b/Meitelan_kosmine_simfonii.mw
@@ -1,9 +1,9 @@
-'''Kosmine Maetel Simfonii: Tähtazkundan ekspressan 999 sanutez-sarak''' ({{lang-ja|宇宙交響詩メーテル ～銀河鉄道999(スリーナイン)外伝～}} ''Supēsu Simfonī Mēteru: Ginga Tetsudō Surī Nain Gaiden'') om [[Japonii|japonine]] anime-serial tedoližen fantastikan žanras. Režissör om Šin'jiči Masaki.
+'''Meitelan kosmine simfonii: Tähtazkundan ekspressan 999 sanutez-sarak''' ({{lang-ja|宇宙交響詩メーテル ～銀河鉄道999(スリーナイン)外伝～}} ''Supēsu Simfonī Mēteru: Ginga Tetsudō Surī Nain Gaiden'') om [[Japonii|japonine]] anime-serial tedoližen fantastikan žanras. Režissör om Šin'jiči Masaki.
 
 Kaik om 13 epizodad serialas. Se läksi ekranoile vn 2004 elokus-redukus.
 
 == Änetoitandan rolid ==
-* ''[[Maetel]]'' — Satsuki Jukino
+* ''[[Meitel]]'' — Satsuki Jukino
 * ''Prometium-kunigaznaine'' — Keiko Han
 * ''[[Točiro Ojama]]'' — Kappei Jamaguči
 * ''Leopard'' — Jasunori Macumoto
