*Empty MediaWiki Message*

--- a/Meitelan_legend.mw
+++ b/Meitelan_legend.mw
@@ -1,7 +1,7 @@
-'''Maetelan legend''' ({{lang-ja|メーテルレジェンド}} ''Mēteru Redzendo'') om vn 2000 [[Japonii|japonine]] anime-serial tedoližen fantastikan žanras. Režissör om Kadzujoši Jokota. Akt'oriden valičend — Naomi Šindo. Serialas om kaht epizodad.
+'''Meitelan legend''' ({{lang-ja|メーテルレジェンド}} ''Mēteru Redzendo'') om vn 2000 [[Japonii|japonine]] anime-serial tedoližen fantastikan žanras. Režissör om Kadzujoši Jokota. Akt'oriden valičend — Naomi Šindo. Serialas om kaht epizodad.
 
 == Roliden änetoitand ==
-* ''[[Maetel]]'' — Sacuki Jukino
+* ''[[Meitel]]'' — Sacuki Jukino
 * ''[[Emeral'das]]'' — Acuko Enomoto
 * ''Prometium-kunigaznaine'' — Keiko Han
 * ''Dagar'' — Hosuke Akimoto
