*Empty MediaWiki Message*

--- a/Tähtazkundan_ekspress_999.mw
+++ b/Tähtazkundan_ekspress_999.mw
@@ -4,7 +4,7 @@ Kaik om 113 epizodad serialas. Se läksi ekranoile vodes 1978 (14. sügüz'ku) v
 
 == Roliden änetoitand ==
 * ''Tecuro Hošino'' — [[Nozava Masako|Masako Nozava]]
-* ''[[Maetel]]'' — [[Ikeda Masako|Masako Ikeda]]
+* ''[[Meitel]]'' — [[Ikeda Masako|Masako Ikeda]]
 * ''Konduktor'' — [[Kimocuki Kaneta|Kaneta Kimocuki]]
 * ''[[Harlok]]'' — [[Inoue Makio|Makio Inoue]]
 * ''[[Emeral'das|Emeral'das-kunigaznaine]]'' — [[Tadzima Reiko|Reiko Tadzima]]
