*Empty MediaWiki Message*

--- a/Meitel.mw
+++ b/Meitel.mw
@@ -4,7 +4,7 @@ Ezmäižen kerdan Meitel ozutihe [[Tähtazkundan ekspress 999]]-mangas (1977). H
 
 Naine om [[Tecuro Hošino|Tecuron]] kaimdajan ajelendas Andromedannoks. Tecuro tundištab hänes ičeze mamad, no scenarijan mändes mainitase, miše naine ei voi kolda, Meitel spravitase teravas surmaližihe satatesihe kacmata. Kinoversijan finalas Meitel avaidase Tecurole, pagižeb, miše hänen mam faktižikš, hibj vajehtase ravastusen tagut i se om eziauguižen Meitelan kopii. Naižen todesine hibj kaičese jäižes Plutonas, Tecuro nägui itkijad Meitelad sen planetan kaumžomal. Finalas Meitel ajeleb Plutonha udessündutamha ičeze hibjad, no jäi tedmata, kändi-k hän ristituks tošti.
 
-Änetiba artistad: Masako Ikeda i Sacuki Jukino («[[Meitelan legend]]» i «[[Meitelan kosmine simfonii]]»).
+Änetoitiba Meitelan rolid: Masako Ikeda i Satsuki Jukino («[[Meitelan legend]]» i «[[Meitelan kosmine simfonii]]»).
 
 == Homaičendad ==
 <references />
