*Empty MediaWiki Message*

--- a/Sag_Harlokas.mw
+++ b/Sag_Harlokas.mw
@@ -6,7 +6,7 @@ Serialas om kuz' epizodad da 30 minutad hätkte. Se läksi ekranoile vodes 1999 
 * ''[[Harlok]]-kapitan, Točiro Ojama'' — [[Jamadera Koiči|Koiči Jamadera]]
 * ''Jattaran'' — [[Čiba Šigeru|Šigeru Čiba]]
 * ''Miime'' — [[Janaga Kazuko|Kazuko Janaga]]
-* ''Maetel'' — [[Ikeda Masako|Masako Ikeda]]
+* ''Meitel'' — [[Ikeda Masako|Masako Ikeda]]
 * ''[[Emeral'das-kunigaznaine]]'' — [[Kacuki Masako|Masako Kacuki]]
 * ''Votan'' — [[Išida Taro|Taro Išida]]
 * ''Fasolt'' — [[Kojasu Takehito|Takehito Kojasu]]
