--- a/Tähtazkundan_ekspress_999_(fil'm).mw
+++ b/Tähtazkundan_ekspress_999_(fil'm).mw
@@ -31,16 +31,16 @@
 '''«Tähtazkundan ekspress 999»''' ({{lang-ja|銀河鉄道９９９}} ''Ginga tetsudō 999'') om japonine draman mul'tfil'm tedoližen fantastikan žanras. Nece mul'tfil'm om fil'matud ühtennimižiden [[manga]]n da [[anime]]n mödhe.
 
 == Rolid ==
-* Masako Nozava — Tetsuro Hošino
-* Masako Ikeda — Maetel
-* Asagami Joko — Klair
-* Kenta Kimocuki — konduktor
-* Makio Inoue — Kosmine Harlok
-* Reiko Tadžima — Emeraldas-kunigaznaine
-* Takaši Tojama — Toširo Ojama
-* Fudžita Huatulco — Šadov
-* Akiko Cuboi — Tecuo-mam
-* Goro Naja — Pan-doktor
+* Masako Nozava — ''Tetsuro Hošino''
+* Masako Ikeda — ''Meitel''
+* Asagami Joko — ''Klair''
+* Kenta Kimocuki — ''konduktor''
+* Makio Inoue — ''Kosmine Harlok''
+* Reiko Tadžima — ''Emeraldas-kunigaznaine''
+* Takaši Tojama — ''Toširo Ojama''
+* Fudžita Huatulco — ''Šadov''
+* Akiko Cuboi — ''Tecuo-mam''
+* Goro Naja — ''Pan-doktor''
 
 == Homaičendad ==
 <references />
