--- a/Tähtazkundan_ekspress_999_(fil'm).mw
+++ b/Tähtazkundan_ekspress_999_(fil'm).mw
@@ -37,7 +37,7 @@
 * Kenta Kimocuki — ''konduktor''
 * Makio Inoue — ''Kosmine Harlok''
 * Reiko Tadžima — ''Emeraldas-kunigaznaine''
-* Takaši Tojama — ''Toširo Ojama''
+* Takaši Tojama — ''Točiro Ojama''
 * Fudžita Huatulco — ''Šadov''
 * Akiko Cuboi — ''Tecuo-mam''
 * Goro Naja — ''Pan-doktor''
