*Empty MediaWiki Message*

--- a/Jä_hüväšti_igäks,_Tähtazkundan_ekspress_999.mw
+++ b/Jä_hüväšti_igäks,_Tähtazkundan_ekspress_999.mw
@@ -32,7 +32,7 @@
 
 == Änetoitandan rolid ==
 * ''Tecuro Hošino'' — Masako Nozava
-* ''[[Maetel]]'' — Masako Ikeda
+* ''[[Meitel]]'' — Masako Ikeda
 * ''Konduktor'' — Kaneta Kimoduki
 * ''Metalmena'' — Joko Asagami
 * ''Faust'' — Toru Emori
