--- a/Dom-2.mw
+++ b/Dom-2.mw
@@ -1,9 +1,9 @@
 [[Fail:ДОМ 2.JPG|thumb|right|250px|«Dom-2 party»]]
-'''Dom-2''' ({{lang-ru|Дом-2}}, «Kodi-kaks'») oli [[Venälaine Federacii|Venäman]] [[TNT (TV-kanal)|TNT-kanalan]] [[realiti-šou]]. Lähtli ekranoile vll [[2004]]−[[2020]]<ref>[http://www.gazeta.ru/culture/news/2020/12/18/n_15381128.shtml ТНТ закрывает реалити-шоу «Дом-2» (TNT sauptab «Dom-2»-šoud) // ''Gazeta.ru''. 18. tal'vku 2020.] {{ref-ru}}</ref>.
+'''Dom-2''' ({{lang-ru|Дом-2}}, «Kodi-kaks'») om [[Venälaine Federacii|Venäman]] venäkel'ne [[realiti-šou]]. Lähtli ekranoile [[TNT (TV-kanal)|TNT-kanalal]] vll [[2004]]−[[2020]]<ref>[http://www.gazeta.ru/culture/news/2020/12/18/n_15381128.shtml ТНТ закрывает реалити-шоу «Дом-2» (TNT sauptab «Dom-2»-šoud) // ''Gazeta.ru''. 18. tal'vku 2020.] {{ref-ru}}</ref>. Lähtleb televizijan [[Ju (TV-kanal)|Ju]]-kanalal vn 2021 sulakun 19. päiväspäi.
 
-Šoun vedajad oliba [[Sobčak Ksenija|Ksenija Sobčak]] (2004−2012), [[Borodina Ksenija|Ksenija Borodina]] (2004−2020) da [[Buzova Ol'ga|Ol'ga Buzova]] (2008−2020).
+Šoun päižed vedajad oliba [[Sobčak Ksenija|Ksenija Sobčak]] (2004−2012), [[Borodina Ksenija|Ksenija Borodina]] (2004−2020) i [[Buzova Ol'ga|Ol'ga Buzova]] (2008−2020).
 
-Kaik om fil'mdud enamb mi 6 067 epizodad (20.12.2020), se om kaikiš hätkemb TV-šou mail'mas.
+Kaik om fil'mdud enamb mi 6 067 epizodad (20.12.2020), se om kaikiš hätkemb TV-šou mail'mas. Fil'mdand tegihe [[Moskv]]as, [[Moskvan agj]]as i [[Seišelan Sared|Seišelan Saril]].
 
 == Homaičendad ==
 <references />
