--- a/Beverli_Hills.mw
+++ b/Beverli_Hills.mw
@@ -13,7 +13,9 @@
  | Telefonkod = +1-310. +1-323. +1-424
  | Aigvö = tal'vel [[UTC]]−8,<br />kezal [[UTC]]−7
 }}
-'''Beverli Hills''' ({{lang-en|Beverly Hills}}) om [[Amerikan Ühtenzoittud Valdkundad|AÜV:oiden]] lidn [[Kalifornii (štat)|Kalifornii]]-štatas. Mülüb [[Los Andželes (ümbrik)|Los Andželes-ümbrikho]]. Lidn om ümbärtud [[Los Andželes]]-lidnal kaikiš polišpäi.
+'''Beverli Hills''' ({{lang-en|Beverly Hills}} [ˌbevəɹ̠li ˈhɪɫz] «Beverli-kukhad») om [[Amerikan Ühtenzoittud Valdkundad|AÜV:oiden]] lidn [[Kalifornii (štat)|Kalifornii]]-štatan suves. Mülüb [[Los Andželes (ümbrik)|Los Andželes-ümbrikho]]. Lidn om ümbärtud [[Los Andželes]]-lidnal kaikiš polišpäi.
+
+Tetabad fil'miden akt'orad i aktrisad elädas lidnan erižpertiš.
 
 Lidn sijadase 79 m ü.m.t. keskmäižel korktusel.
 
