--- a/Beverli_Hills.mw
+++ b/Beverli_Hills.mw
@@ -7,20 +7,29 @@
  | Valdkund = Amerikan Ühtenzoittud Valdkundad
  | Eläjiden lugu = 34,109
  | Voz' = 2010
- | Pind = 14.7
+ | Pind = 14.8
  | Fail = Rodeo Drive & Via Rodeo, Beverly Hills, LA, CA, jjron 21.03.2012.jpg
- | Pämez' = Uil'jam Brajen
+ | Pämez' = Robert Vunderlih<br/>(2021−2022,<br/>''Robert Wunderlich'')
  | Telefonkod = +1-310. +1-323. +1-424
  | Aigvö = tal'vel [[UTC]]−8,<br />kezal [[UTC]]−7
 }}
-'''Beverli Hills''' ({{lang-en|Beverly Hills}} [ˌbevəɹ̠li ˈhɪɫz] «Beverli-kukhad») om [[Amerikan Ühtenzoittud Valdkundad|AÜV:oiden]] lidn [[Kalifornii (štat)|Kalifornii]]-štatan suves. Mülüb [[Los Andželes (ümbrik)|Los Andželes-ümbrikho]]. Lidn om ümbärtud [[Los Andželes]]-lidnal kaikiš polišpäi.
+'''Beverli Hills''' ({{lang-en|Beverly Hills}} [ˌbevəɹ̠li ˈhɪɫz] «Beverli-kukhad») om [[Amerikan Ühtenzoittud Valdkundad|AÜV:oiden]] lidn [[Kalifornii (štat)|Kalifornii]]-štatan suves. Mülüb [[Los Andželes (ümbrik)|Los Andželes-ümbrikho]].
 
-Tetabad fil'miden akt'orad i aktrisad elädas lidnan erižpertiš.
+== Istorii ==
+Indejalaižed arvostiba kazvatelišt mahust i veden äjut lidnan tahondas. Eziauguižešti rančo oli lidnan sijas. Vspäi 1900 ectihe kivivoid, no löutihe reskvet, i ottihe pätandad säta lidnan planad. Beverli-Hillz om kirjutadud eländpunktaks vl 1914. Los Andželes napri otta lidnad ičheze severt-se kerdoid veden purtkiden tagut, no kaik om edeližikš tähäsai.
 
-Lidn sijadase 79 m ü.m.t. keskmäižel korktusel.
+Tetabad fil'miden akt'orad i aktrisad elädas lidnan erižpertiš. [[Metro-Goldwyn-Mayer]]-mediakompanijan päfater sijadase lidnas. Kacmata sihe, ristitišton sal'hed oma alemba mi lähižes Los Andželesas. Äi radnikoid om ottud lidnan administracijha i školoihe.
+
+== Geografijan andmused ==
+Lidn sijadase 79 m ü.m.t. keskmäižel korktusel. Se om ümbärtud [[Los Andželes]]-lidnal kaikiš polišpäi päiči pohjoižpäivnouzmas, kus Beverli-Hillz röunatab [[Päivlaskmaine Gollivud]]-lidnanke.
 
 Vn 2010 AÜV:oiden rahvahanlugemižen mödhe lidnan eläjiden lugu oli 34 109 ristitud.
 
+== Homaičendad ==
+<references />
+
+== Irdkosketused ==
+* [http://beverlyhills.org/ Lidnan oficialine sait (''beverlyhills.org'').] {{ref-en}}
 {{Commons|Category:Beverly Hills, California}}
 
 {{stub}}
