--- a/Beverli_Hills.mw
+++ b/Beverli_Hills.mw
@@ -25,11 +25,13 @@ Lidn sijadase 79 m ü.m.t. keskmäižel korktusel. Se om ümbärtud [[Los Andže
 
 Vn 2010 AÜV:oiden rahvahanlugemižen mödhe lidnan eläjiden lugu oli 34 109 ristitud.
 
+[[Brazilii|Brazilijan]], [[Ekvador]]an i [[Kolumbii|Kolumbijan]] konsulused sijadasoiš lidnas.
+
 == Homaičendad ==
 <references />
 
 == Irdkosketused ==
-* [http://beverlyhills.org/ Lidnan oficialine sait (''beverlyhills.org'').] {{ref-en}}
+* [http://www.beverlyhills.org/ Lidnan oficialine sait (''beverlyhills.org'').] {{ref-en}}
 {{Commons|Category:Beverly Hills, California}}
 
 {{stub}}
