([[c:GR|GR]])  [[File:Grb-Cetinja.gif]] → [[File:Cetinje Coat-of-Arms.svg]]

--- a/Cetine.mw
+++ b/Cetine.mw
@@ -1,6 +1,6 @@
 {{Eländpunkt
  | Nimi = Cetine<br />Cetinje / Цетиње
- | Lidnanznam = Grb-Cetinja.gif
+ | Lidnanznam = Cetinje Coat-of-Arms.svg
  | Flag = Flag of Cetinje.svg
  | Lidnanznam text = Cetinen lidnanznam
  | Flag text = Cetinen flag
