*Empty MediaWiki Message*

--- a/Lahiri_Bappi.mw
+++ b/Lahiri_Bappi.mw
@@ -2,7 +2,7 @@
 | изображение = BappiLahiri.jpg
 | описание изображения = Bappi Lahiri loičendad aigan, vn 2013 eloku
 }}
-'''Bappi Lahiri''' ({{lang-bn|বাপ্পী লাহিড়ী}}, {{lang-hi|बप्पी लाहिड़ी}}; sünd. [[27. kül'mku]] [[1952]], [[Džalpaiguri]], [[Päivlaskmaine Bengalii]], [[Indii]]) om indijalaine pajatai da muzikankirjutai.
+'''Bappi Lahiri''' ({{lang-bn|বাপ্পী লাহিড়ী}}, {{lang-hi|बप्पी लाहिड़ी}}; sünd. [[27. kül'mku]] [[1952]], [[Džalpaiguri]], [[Päivlaskmaine Bengalii]], [[Indii]]) oli indijalaine pajatai da muzikankirjutai.
 
 == Muzik fil'miden täht ==
 * «''[[Diskon kargaidai]]''» (1982)
