--- a/Nižnevartovsk.mw
+++ b/Nižnevartovsk.mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Nižnevartovskan lidnanznam
  | Flag text = Nižnevartovskan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 274,595
- | Voz' = 2017
- | Pind = 271.32
+ | Eläjiden lugu = 278,725
+ | Voz' = 2021
+ | Pind = 270.59
  | Fail = Nizhnevartovsk, lake Komsomolskoye skyline.jpg
- | Pämez' = Vasilii Tihonov<br />(reduku 2016—)
+ | Pämez' = Dmitrii Koščenko<br />(semendku 2021—)
  | Telefonkod = +7-3466-xxx-xxx
  | Avtokod = 86. 186
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
@@ -31,12 +31,28 @@ Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 251 694 ris
 
 Rahvahad (enamba 1% vl 2010): [[venälaižed]] — 61,6%, [[totarlaižed]] — 9,1%, [[ukrainalaižed]] — 5,8%, [[baškiralaižed]] — 3,1%, [[azerbaidžanlaižed]] — 1,8%, [[vaugedvenälaižed]] — 1,0%, toižed rahvahad — 8,6%, rahvahuden ozutandata — 9,0%.
 
-Nižnevartovskan valdkundaline universitet, kivivoin tehnikum, edheotaikundan tehnikum i 4 kolledžad oma [[openduz|opendusen]] aluzkundoikš, mugažo om verhiden lidnoiden filialid. Kuz' sportkompleksad ratas lidnas.
+Nižnevartovskan valdkundaline universitet, kivivoin tehnikum, edheotaikundan tehnikum i nell' kolledžad oma [[openduz|opendusen]] aluzkundoikš, mugažo om verhiden lidnoiden filialid. Kuz' sportkompleksad ratas lidnas.
+
+Edeline lidnan pämez' om Vasilii Tihonov (reduku 2016 — semendku 2021).
 
 == Transport ==
 Avtobusad da taksid oma kundaližeks transportaks lidnas da sen ümbrištos. Navigacijan aigan voib sadas Hanti-Mansiiskhasai jogiportan kal't, no se radab vemha ujuden jüguid tobjimalaz. Päraudtestancijan sauvuz om loptüd vl 2002 lidnan päivnouzmas.
 
 Rahvahidenkeskeine civiline Nižnevartovsk-lendimport (''NJC / НЖВ'') sijadase 4 km lodeheze lidnan keskusespäi. Tehtas reisid järedoihe lidnoihe Venämadme: Moskv, Tümen', Kazan', Novosibirsk, Irkutsk da erased toižed.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+Нижневартовск, стела - panoramio.jpg|«Flag randirdal»-monument (2010)
+Озеро Комсомольское Нижневартовск.JPG|Komsomol'skoje-järv vn 2013 semendkus
+Храм Рождества Христова в Нижневартовске.jpg|Raštvoiden jumalanpert', vn 2006 nägu (om saudud vll 1994−1999)
+Главный корпус НВГУ.jpg|Nižnevartovskan valdkundaližen universitetan päkorpus (2014)
+Европа-Сити Нижневартовск.jpg|«Evropa-Siti»-torguimižbobuštuzkeskuz (2013)
+Олимпия Нижневартовск.jpg|«Olimpija»-sportkompleks (2013)
+Нижневартовск, фонтан около дворца искусств - panoramio.jpg|Fontan Čomamahtoiden pert'kulunno (2008)
+Автовокзал Нижневартовск.JPG|Avtostancijanno vl 2013
+Nizhnevartovsk, Khanty-Mansi Autonomous Okrug, Russia - panoramio (4).jpg|Nižnevartovsk-lendimportan sauvused vl 2010
+Вокзал НВ.jpg|Nižnevartovsk I-päraudtestancijan sauvuz vl 2013
+</gallery>
 
 == Irdkosketused ==
 * [http://www.n-vartovsk.ru/ Nižnevartovsk-lidnan sijaližen ičeohjastusen aluzkundoiden oficialine sait (''n-vartovsk.ru'').] {{ref-ru}}
