--- a/Mangostan.mw
+++ b/Mangostan.mw
@@ -1,7 +1,7 @@
 {{Taxobox
  | name         = Mangostan
  | image title  = Mangostan
- | image file   = YosriManggis3.jpg
+ | image file   = Mangosteens - whole and opened.jpg
  | image descr  = Mangostanan plodud
  | regnum       = Kazmused
  | divisio      = [[Änikkazmused]] (''Magnoliophyta'')
