--- a/Nägan'.mw
+++ b/Nägan'.mw
@@ -5,8 +5,8 @@
  | Lidnanznam text = Näganin lidnanznam
  | Flag text =
  | Valdkund = Venäma
- | Eläjiden lugu = 57,765
- | Voz' = 2017
+ | Eläjiden lugu = 58,733
+ | Voz' = 2021
  | Pind = 50
  | Fail = Панорама центра города.jpg
  | Pämez' = Ivan Jamašev<br />(reduku 2016—)
@@ -31,11 +31,20 @@ Klimat om kontinentaline. Voden keskmäine lämuz — −1,4 C°, vilukun lämuz
 Nägan' om lidnümbrikon üks'jäine eländpunkt. Lidnümbrikon pind — 814 km².
 
 == Eläjad ==
-Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 54 890 ristitud. Kaikiš suremb lidnan ristitišt oli 60 700 eläjad vl 1996. Ortodoksižen hristanuskondan ph. Aleksii Moskvalaižen päjumalanpert'<ref>[http://sobory.ru/geo/locat/10142 Näganin pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> om saudud lidnha vll 1993−2004, islaman mečet' om olmas.
+Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 54 890 ristitud. Kaikiš suremb lidnan ristitišt oli 60 700 eläjad vl 1996.
+
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] ph. Aleksii Moskvalaižen päjumalanpert'<ref>[http://sobory.ru/geo/locat/10142 Näganin pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> om saudud lidnha vll 1993−2004, [[islam]]an mečet' om olmas.
 
 Rahvahad (enamba 0,8% vl 2010): [[venälaižed]] — 67,5%, [[totarlaižed]] — 7,1%, [[ukrainalaižed]] — 5,0%, [[baškiralaižed]] — 2,1%, [[azerbaidžanlaižed]] — 1,7%, [[uzbekad]] — 1,5%, [[kirgizlaižed]] — 0,9%, [[vaugedvenälaižed]] — 0,9%, [[čuvašalaižed]] — 0,8%, [[kumikad]] — 0,8%, toižed rahvahad — 6,9%, rahvahuden ozutandata — 4,8%.
 
 Professionaližen opendusen aluzkundad: Näganin tehnologine kolledž, Uralan politehnižen kolledžan filial<ref>[http://упк-нягань.рф/ Uralan politehnižen kolledžan Näganin filialan sait (''упк-нягань.рф'').] {{ref-ru}}</ref> (Jekaterinburg), Uralan tegimištoliž-ekonomižen tehnikuman filial (Jekaterinburg) i [[Žirnovsk]]an kivivoitehnikuman filial.
+
+== Galerei ==
+<gallery mode="packed" heights="125px">
+ТНК-Нягань-Южный-2006.png|«TNK-Nägan'»-edheotandan puhtastimed i tavarpark vl 2006 (Talinkan kivivoin löudmižsijaspäi)
+Няганская ГРЭС.jpg|Näganin GRES vl 2013
+Nyagan mkr2 21.jpg|Kahtendes mikrorajonas (2008)
+</gallery>
 
 == Homaičendad ==
 <references />
