--- a/Pit'_Jah.mw
+++ b/Pit'_Jah.mw
@@ -5,11 +5,11 @@
  | Lidnanznam text = Pit' Jahan lidnanznam
  | Flag text = Pit' Jahan flag
  | Valdkund = Venäma
- | Eläjiden lugu = 40,798
- | Voz' = 2017
+ | Eläjiden lugu = 39,436
+ | Voz' = 2021
  | Pind = 80.4
  | Fail =
- | Pämez' = Aleksandr Morozov<br />(heinku 2018—,<br />''velgusentäutai'')
+ | Pämez' = Aleksandr Morozov<br />(heinku 2018—)
  | Telefonkod = +7-3463-xxx-xxx
  | Avtokod = 86. 186
  | Aigvö = [[UTC]]+5 ([[MSK]]+2)
@@ -24,14 +24,19 @@ Pit' Jah šingotase kivivoin samižel da pompandal («RN-Juganskneftegaz»-kompa
 == Geografijan andmused ==
 Lidn sijadase Sur' Balik-jogen oiktal randal ({{lang-ru|Большой Балык}}, 243 km pitte, [[Ob'|Obin]] hura ližajogi), 50 m keskmäižel korktusel valdmeren pindan päl. Matkad [[Hanti-Mansiisk]]hasai om 209 km päivlaskmha orhal vai 259 km avtotedme. Lähembaine lidn om [[Neftejugansk]] 39 km pohjoižhe orhal vai 49 km avtol. Pit' Jahan päraudtestancii om lähembaine Neftejuganskan eläjiden täht.
 
-Pit' Jah om lidnümbrikon üks'jäine eländpunkt. Lidn jagase 11 mikrorajonha.
+Pit' Jah om lidnümbrikon üks'jäine eländpunkt. Lidn jagase 11 mikrorajonaks.
 
 == Eläjad ==
 Vn 2010 kaiken Venäman rahvahanlugemižen mödhe eläjiden lugu oli 41 488 ristitud. Kaikiš suremb ristitišt oli 41..42 tuhad eläjid vll 1998−2015 (42 500 rist. vl 1998).
 
+[[Ortodoksine hristanuskond|Ortodoksižen hristanuskondan]] Jumalanmaman «Varastamatoi ihastuz»-jumalaižen jumalanpert'<ref>[http://sobory.ru/geo/distr/2371 Pit' Jahan pühäpertid ''sobory.ru''-saital.] {{ref-ru}}</ref> om saudud lidnas vll 1995−1999.
+
 Rahvahad (enamba 0,8% vl 2010): [[venälaižed]] — 55,8%, [[ukrainalaižed]] — 9,3%, [[totarlaižed]] — 7,4%, [[kumikad]] — 5,0%, [[baškiralaižed]] — 3,2%, [[azerbaidžanlaižed]] — 2,7%, [[čečenalaižed]] — 1,7%, [[čuvašalaižed]] — 1,4%, [[lezgilaižed]] — 1,3%, [[moldovalaižed]] — 1,1%, [[vaugedvenälaižed]] — 0,8%, toižed rahvahad — 5,9%, rahvahuden ozutandata — 4,4%.
 
-Pit' Jahan industrialine kolledž om professionaližen opendusen aluzkundaks.
+Pit' Jahan industrialine kolledž om professionaližen opendusen aluzkundaks, se om Jugran valdkundaližen universitetan filial.
+
+== Homaičendad ==
+<references />
 
 == Irdkosketused ==
 * [http://duma.gov86.org/ Lidnan Duman oficialine sait (''duma.gov86.org'').] {{ref-ru}}
