informacijan kadotused oma čuratud

--- a/Mangostan.mw
+++ b/Mangostan.mw
@@ -1,7 +1,7 @@
 {{Taxobox
  | name         = Mangostan
  | image title  = Mangostan
- | image file   = Mangosteens - whole and opened.jpg
+ | image file   = YosriManggis3.jpg
  | image descr  = Mangostanan plodud
  | regnum       = Kazmused
  | divisio      = [[Änikkazmused]] (''Magnoliophyta'')
@@ -17,6 +17,7 @@
  | ncbi         = 58228
  | range map    = 
 }}
+[[Fail:Mangosteens - whole and opened.jpg|thumb|left|250px|Kogonaine plod i avaitud südäimenke]]
 '''Mangostan''' ({{lang-la|Garcinia mangostana}}) om tropine igähižvihand [[pu]] [[Kluzijanvuiččed]]-sugukundaspäi. Se libub [[Suvipäivnouzmpol'ne Azii|Azijan longibokaspäi]].
 
 Pu om muzaburanke korenke, piramidanvuitte nägu, kazvab 25 metrhasai. Nored lehtesed oma ruskedvauvhad, täuz'kaznuden lehtišton üläh om muzavihand, pakuižvihand alahaspäi.
