--- a/Google_Chrome.mw
+++ b/Google_Chrome.mw
@@ -1,7 +1,11 @@
 [[Fail:Google Chrome icon (September 2014).svg|thumb|right|100px|«Google Chrome»-kaclimen znam (lapak, 2014)]]
 '''Google Chrome''' ([ɡuːɡl krəum], lugeda vepsäks: ''Gugl [[Hrom]]'') om «[[Google]]»-kompanijan maksutoi [[kaclim]]. Sädase [[C++]]-kelel.
 
-Ezmäine versii oli levitadud vn 2008 2. päiväl sügüz'kud. Versijad udištasoiš tähäsai. Vn 2017 heinkus se oli kaikiš populärižemb kaclim mail'mas, kävutajiden viž ühesandest otiba ičeze kompjuteroihe.
+Ezmäine versii oli levitadud vn 2008 2. päiväl sügüz'kud. Versijad udištasoiš tähäsai. Vn 2017 heinkus se oli kaikiš populärižemb kaclim mail'mas, kävutajiden viž ühesandest otiba ičeze kompjuteroihe. Kaclimen interfeis om sätud 167 kelel.
+
+Kaclim endustab kävutajad edel tulendad pahidoičijha saitha. Chrome sädab ičeze processad kaikuččen avaitud iknan täht tobjimalaz, muga iknoiden südäiolend ei voi valatoita toine toižhe, i ku ühten iknan process azotase äkkid, ka voib loptä sidä andmusiden kadotandata toižiš iknoiš.
+
+Vspäi 2018 reklaman fil'tr radab kaclimes.
 
 == Irdkosketused ==
 * [http://google.com/chrome Kaclimen oficialine lehtpol' ''google.com''-saital.] <small>''(äjil kelil)''</small>
