--- a/Nivhan_kel'.mw
+++ b/Nivhan_kel'.mw
@@ -1,4 +1,4 @@
-'''Nivhan kel'''' (ičeze nimituz: ''Нивхгу диф'') om [[nivhalaižed|nivhalaižiden]] kel', üks' [[izoliruidud keled|izoliruidud kelišpäi]].
+'''Nivhan kel'''' (ičeze nimitused: ''Нивхгу диф'' amuran paginas, ''Ниғвгун дуф'' sahalinan paginoiš) om [[nivhalaižed|nivhalaižiden]] kel', üks' [[izoliruidud keled|izoliruidud kelišpäi]]. Se om kadondan grazindan al.
 
 Pagižijoiden lugu — 198 ristitud (vn [[2010]] rahvahanlugemine), [[Venäma]]n [[Edahaine Päivnouzmpol'|Edahaižes Päivnouzmpoles]] tobjimalaz. Toine rahvahan kel' om [[venän kel']].
 
