*Empty MediaWiki Message*

--- a/Nivhan_kel'.mw
+++ b/Nivhan_kel'.mw
@@ -3,7 +3,7 @@
 == Kel'situacii ==
 Pagižijoiden lugu — 198 ristitud (vn [[2010]] rahvahanlugemine), rauhad mehed [[Venäma]]n [[Edahaine Päivnouzmpol'|Edahaižes Päivnouzmpoles]] tobjimalaz. Toine rahvahan kel' om [[venän kel']]. Rahvahan lugumär om 5,2 tuhad ristituid (2002).
 
-Opetas kel't alaškolas [[Sahalinan agj]]an i [[Habarovskan rand]]an severziš-se školoiš. Pästtas abekirjoid, openduzkirjoid, čomamahtoižid sädusid hibjan kelel. «Nivh dif»-kulehtez (''Нивх диф'' «nivhan kel'») lähtleb Sahalin-sarel.
+Opetas kel't alaškolas [[Sahalinan agj]]an i [[Habarovskan rand]]an severziš-se školoiš. Pästtas abekirjoid, openduzkirjoid, čomamahtoižid sädusid nivhan kelel. «Nivh dif»-kulehtez (''Нивх диф'' «nivhan kel'») lähtleb Sahalin-sarel.
 
 == Harakteristik ==
 Nell' paginad: amuran (erased tedomehed lugetas erižeks keleks), pohjoižsahalinan, päivnouzmsahalinan i suvisahalinan. Kirjkel' om [[kirilline kirjamišt|kirilližen]] kirjamišton pohjal vspäi 1937.
